--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,72 @@
+html {
+  font-size: 16px;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #0d2235;
+}
+img {
+  max-width: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+h1 {
+  color: white;
+  text-align: left;
+  font-weight: 700;
+  font-size: 3.125rem;
+  margin-bottom: 3.125rem;
+  margin-top: 5rem;
+}
+h1::after {
+  content: '';
+  width: 6.25rem;
+  height: 0.375rem;
+  background-color: #66a2fe;
+  display: block;
+}
+
+label {
+  color: white;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.25rem;
+  margin-top: 2rem;
+}
+input[type="submit"]{
+  margin-top: 1.25rem;
+  font-weight: bold;
+  font-size: 1.25rem;
+  padding: 0.625rem;
+  height: auto;
+}
+
+.container img {
+  margin-top: 9.375rem;
+}
+.error {
+  background-color: #b7322c;
+  padding: 1rem;
+  color: white;
+  font-size: 1.125rem;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-align: center;
+}
+
+.result {
+  color: white;
+
+}
+.result h2 {
+  font-weight: bold;
+  color: white;
+}
+
+.result p {
+  font-size: 1.125rem !important;
+}
+.result p span {
+  font-weight: bold;
+}
+p.price{
+  font-size: 1.875rem !important;
 }
